--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,107 +1,167 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+main {
+  scroll-behavior: smooth;
+  
 }
+body{
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  ;
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
   }
+
+.wrapper {
+  height: 95vh;
+  width: 95vw;
+  gap: 20rem;
+  background: '';
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+.hide{
+  visibility: hidden;
+  
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.box {
+  height: 150pt;
+  width: 150pt;
+  background-color: rgb(223, 205, 206);
+  display: flex;
+  position: absolute;
+  margin-left: 200px;
+  border-radius: 5px;
+  z-index: 90;
+  padding: 20px;
+  visibility: hidden
+  
+
+}
+.container {
+  position: relative;
+  display: grid;
+  grid-template-areas:
+    "a a b b"
+    "c d b b"
+    "e f g h"
+    "i i j k"
+    "i i l k";
+
+  grid-gap: 25px;
+  padding: 25px;
+  background: white;
+  border-radius: 20px;
+  cursor: pointer;
+  box-shadow: 0px 10px 10px -5px rgba(0, 0, 0, 0.05);
+  will-change: scroll scale, width, height;
+  transition: ease-in-out;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.btn {
+  border: none;
+  opacity: 0;
+  transition: opacity 500ms ease-in-out;
+  position: relative;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.btn:hover {
+  cursor: pointer;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.open {
+  opacity: 1;
 }
+
+.item:nth-of-type(1) {
+  grid-area: a;
+}
+.item:nth-of-type(2) {
+  grid-area: b;
+}
+.item:nth-of-type(3) {
+  grid-area: c;
+}
+.item:nth-of-type(4) {
+  grid-area: d;
+}
+.item:nth-of-type(5) {
+  grid-area: e;
+}
+.item:nth-of-type(6) {
+  grid-area: f;
+}
+.item:nth-of-type(7) {
+  grid-area: g;
+}
+.item:nth-of-type(8) {
+  grid-area: h;
+}
+.item:nth-of-type(9) {
+  grid-area: i;
+}
+.item:nth-of-type(10) {
+  grid-area: j;
+}
+.item:nth-of-type(11) {
+  grid-area: k;
+}
+
+.item {
+  background: white;
+  border-radius: 5px;
+  will-change: transform, opacity;
+  transition: 120ms ease-out;
+  padding: 20px;
+}
+
+.item:hover {
+  scale: 1.025;
+  z-index: 99;
+  transition: 200ms ease-in;
+}
+
+.item:active {
+  scale: 0.99;
+}
+
+.flower {
+  display: flex;
+  position: fixed;
+  bottom: 0;
+  right: calc(-29px);
+  margin-bottom: 10px;
+}
+.flower2 {
+  display: flex;
+  position: fixed;
+  top: 0;
+  right: 0;
+  margin-bottom: 40px;
+}
+
+.title-wrap {
+  display: flex;
+  
+  position: absolute;
+  z-index: 99;
+  
+}
+
+.title {
+  display: flex;
+  margin-top: -10px;
+  font-weight: 900;
+  font-size: calc(14px);
+  justify-content: center;
+  align-items: center;
+  overflow-y: hidden;
+  padding-inline: 50px;
+  padding: 20px;
+  gap: 1rem;
+  z-index: 99;
+  will-change: pathLength;
+}
+
