--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,18 +6,25 @@ main {
 body {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-    
-    background-color: white;
-  }
+
+  background-color: white;
+}
 
 .wrapper {
   height: 95vh;
   width: 95vw;
-  gap: 20rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  
+}
+
+.wrapper2 {
+  height: 95vh;
+  width: 95vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
 }
 
 .container {
@@ -33,21 +40,10 @@ body {
   margin-top: 60px;
   background: white;
   border-radius: 20px;
-  box-shadow: 0px 10px 10px -5px rgba(0, 0, 0, 0.05);
-  will-change: scroll scale, width, height;
-  transition: ease-in-out;
-  z-index: 10;
-  background-image: url('/Cool2.jpg');
+  will-change: width, height;
+  background-image: url("/Cool2.jpg");
   background-position: center;
   background-size: cover;
-}
-.wrapper2 {
-  height: 95vh;
-  width: 95vw;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 40px
 }
 
 .container2 {
@@ -57,11 +53,8 @@ body {
   margin-top: 60px;
   border-radius: 20px;
   margin-left: -150px;
-  box-shadow: 0px 10px 10px -5px rgba(0, 0, 0, 0.05);
-  will-change: scroll scale, width, height;
-  transition: ease-in-out;
-  z-index: 10;
-  background-image: url('/Hero.jpg');
+  will-change: width, height;
+  background-image: url("/Hero.jpg");
   background-position: center;
   background-size: cover;
 }
@@ -78,30 +71,10 @@ body {
   margin-top: 60px;
   background: white;
   border-radius: 20px;
-  box-shadow: 0px 10px 10px -5px rgba(0, 0, 0, 0.05);
-  will-change: scroll scale, width, height;
-  transition: ease-in-out;
-  z-index: 0;
-  background-image: url('/Cool.jpg');
+  will-change: width, height;
+  background-image: url("/Cool.jpg");
   background-position: center;
   background-size: cover;
-}
-
-
-
-.btn {
-  border: none;
-  opacity: 0;
-  transition: opacity 500ms ease-in-out;
-  position: relative;
-}
-
-.btn:hover {
-  cursor: pointer;
-}
-
-.open {
-  opacity: 1;
 }
 
 .item:nth-of-type(1) {
@@ -163,13 +136,6 @@ body {
   right: calc(-20px);
   margin-bottom: 40px;
 }
-.flower2 {
-  display: flex;
-  position: fixed;
-  top: 0;
-  right: 0;
-  margin-bottom: 40px;
-}
 
 .title-wrap {
   display: flex;
@@ -190,37 +156,6 @@ body {
   padding: 20px;
   gap: 0.78rem;
   z-index: 99;
-  will-change: pathLength;
-}
-
-.snap-type {
-  height: 100vh;
-  scroll-snap-type: y mandatory;
-  overflow-y: scroll;
-  transition: 2000ms ease-in-out;
-  will-change: scroll-position;
-}
-.snap-align {
-  scroll-snap-align: center;
-}
-
-.height {
-  height: 100vh;
-  width: 100vw;
-}
-
-.date {
-  display: flex;
-  font-size: calc(45px);
-  color: black;
-  margin-left: 100px;
-  position: absolute;
-  top: 0px;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  justify-content: center;
-  align-items: center;
 }
 
 .berlin {
@@ -228,14 +163,12 @@ body {
   width: 60vw;
   height: 95vh;
   margin-top: 90px;
-  margin-left: -200px
+  margin-left: -200px;
 }
-.berlin-flex{
+.berlin-flex {
   display: flex;
   position: relative;
-  
   margin-bottom: -200px;
-  
 }
 
 .text {
@@ -267,15 +200,9 @@ body {
 .heading {
   display: flex;
   position: relative;
-  margin-left: 0px;
-  justify-content: center;
-  align-items: center;
   overflow-y: hidden;
   font-size: calc(45px);
   background-color: white;
-  z-index: 0;
- 
-  
 }
 .h1 {
   display: flex;
@@ -283,126 +210,49 @@ body {
   overflow-y: hidden;
 }
 
-
-
 @media screen and (max-width: 750px) {
-  .title-wrap {
+  .berlin-flex {
+    flex-direction: column;
+  }
+  .berlin {
     display: flex;
-    z-index: 99;
-    position: fixed;
-    top: 0;
-  }
-  .berlin-flex{
-display: flex;
-flex-direction: column;
-position: relative;
-margin-bottom: -250px
-  }
-  .berlin{
-   display: flex;
-   position: relative;
+    position: relative;
     width: 95vw;
     margin-left: 15px;
-
   }
-  
+
   .title {
-    display: flex;
-    margin-top: -10px;
-    font-weight: 200;
     font-size: calc(12px);
-    justify-content: center;
-    align-items: center;
-    overflow-y: hidden;
-    padding-inline: 50px;
-    padding: 20px;
-    gap: 0.78rem;
-    z-index: 99;
-    will-change: pathLength;
   }
+
   .container {
-    display: grid;
-    grid-template-areas:
-      "a a b b"
-      "c d b b"
-      "e f g h"
-      "i i j k"
-      "i i l k";
-
     grid-gap: 25px;
     padding: 25px;
-    margin-top: 60px;
-    background: white;
-    border-radius: 20px;
-    background-image: url('/Cool2.jpg');
-    background-position: center;
-    background-size: cover;
-    box-shadow: 0px 10px 10px -5px rgba(0, 0, 0, 0.05);
-    will-change: scroll scale, width, height;
-    transition: ease-in-out;
+    will-change: width, height;
   }
-  .container2 {
-    display: grid;
-    grid-template-areas:
-      "a a b b"
-      "c d b b"
-      "e f g h"
-      "i i j k"
-      "i i l k";
 
-    grid-gap: 25px;
-    padding: 25px;
-    margin-top: 60px;
-    background: white;
-    border-radius: 20px;
-    background-image: url('/Hero.jpg');
-    background-position: center;
-    background-size: cover;
-    box-shadow: 0px 10px 10px -5px rgba(0, 0, 0, 0.05);
-    will-change: scroll scale, width, height;
-    transition: ease-in-out;
-  }
   .text {
-    display: flex;
-    position: relative;
-    height: 50vh;
-    width: 60vw;
-    z-index: 0;
-    margin-top: 50px;
-    margin-bottom: -600px;
-    letter-spacing: 5px;
-    word-spacing: 4px;
-    padding-left: 70px;
     font-size: calc(12px);
   }
+
   .text-h1 {
-    display: flex;
-    position: relative;
-    height: 50vh;
-    width: 50vw;
-    z-index: 0;
-    margin-top: 90px;
     margin-bottom: -450px;
-    letter-spacing: 5px;
-    word-spacing: 4px;
-    padding-left: 70px;
     font-size: calc(25px);
-    font-weight: 900;
-  }
-  .heading{
-    font-size: calc(25px)
-  }
-  .h1{
-    height: calc(25px)
-  }
-@media screen and (max-height: 860px){
-  .text{
-    margin-top: 170px;
   }
 
-  .berlin{
-    margin-top: 220px
+  .heading {
+    font-size: calc(25px);
   }
-}
+  .h1 {
+    height: calc(25px);
+  }
+  @media screen and (max-height: 860px) {
+    .text {
+      margin-top: 170px;
+    }
 
+    .berlin {
+      margin-top: 220px;
+    }
+  }
 }
