--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -64,6 +64,9 @@ body {
   background-image: url("/Cool2.jpg");
   background-position: center;
   background-size: cover;
+  border-style: double;
+  box-shadow: '0,0,0,100';
+  
 }
 
 .container2 {
@@ -78,6 +81,15 @@ body {
   background-position: center;
   background-size: cover;
 }
+.scroll{
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  left: 20vw;
+  font-size: calc(15px);
+  text-transform: uppercase;
+}
+
 .container-II {
   display: flex;
   overflow-x: scroll;
@@ -178,7 +190,8 @@ body {
   display: flex;
   flex-direction: column;
   width: 100vw;
-  height: 100vh
+  height: 100vh;
+  position: relative;
 }
 
 .text {
@@ -191,6 +204,18 @@ body {
   padding-left: 70px;
 }
 .text-h1 {
+  display: flex;
+  position: relative;
+  z-index: 0;
+  margin-top: 90px;
+  margin-bottom: 70px;
+  letter-spacing: 5px;
+  word-spacing: 4px;
+  padding-left: 70px;
+  font-size: calc(30px);
+  font-weight: 900;
+}
+.text-span{
   display: flex;
   position: relative;
   z-index: 0;
@@ -260,6 +285,10 @@ body {
     position: relative;
     width: 95vw;
     margin-left: 10px;
+   
+  }
+  .scroll{
+    left: 10vw
   }
 }
  
