--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,44 +1,53 @@
-
 main {
   scroll-behavior: smooth;
-  
 }
 
 body {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-
   background-color: white;
   overflow-x: hidden;
+}
+.box{
+  display: flex;
+  width: 50vw;
+  height: 150vh
   
+}
+.box-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  
+}
+.box-text{
+  display: flex;
+  width: 50vw;
+  padding-bottom: 100px;
 }
 .smile-wrap {
   display: flex;
   position: absolute;
   top: 0px;
-  right: -100px;
-  padding: 20px;
+  right: 0px;
+  padding-inline: 30px;
+  padding-top: 20px;
   z-index: 9999;
-
-  
- 
 }
-.smile{
+.smile {
   border-radius: 50%;
-  display:flex;
-  width: 250pt;
-  height: 250pt;
-  
+  display: flex;
+  width: 50pt;
+  height: 50pt;
 }
-.smile video{
+.smile video {
   object-fit: cover;
-  
-  
 }
 
 .wrapper {
-  height: 100vh;
-  width: 100vw;
+  height: 95vh;
+  width: 95vw;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -65,8 +74,7 @@ body {
   background-position: center;
   background-size: cover;
   border-style: double;
-  box-shadow: '0,0,0,100';
-  
+  box-shadow: "0,0,0,100";
 }
 
 .container2 {
@@ -81,7 +89,7 @@ body {
   background-position: center;
   background-size: cover;
 }
-.scroll{
+.scroll {
   display: flex;
   flex-direction: column;
   position: absolute;
@@ -91,62 +99,32 @@ body {
 }
 
 .container-II {
-  display: flex;
-  overflow-x: scroll;
-  padding: 5px;
-  margin-top: 60px;
+  display: grid;
+  grid-template-columns: repeat(4, minmax(100px, 1fr));
   background: white;
   border-radius: 20px;
   will-change: width, height;
   background-image: url("/Cool.jpg");
   background-position: center;
   background-size: cover;
-  background-clip: content-box;
+  justify-content: center;
+  align-items: center
+  
 }
 
 .item {
   display: flex;
-  width: 100vw;
-  height: 100vh;
+  width: 80%;
+  height: 80%;
   border-radius: 5px;
   will-change: transform, opacity;
   transition: 120ms ease-out;
-  padding: 20px;
+  
+  justify-content: center;
+  align-items: center
 }
 
-.item:nth-of-type(1) {
-  display: flex;
-}
-.item:nth-of-type(2) {
-  grid-area: b;
-}
-.item:nth-of-type(3) {
-  grid-area: c;
-}
-.item:nth-of-type(4) {
-  grid-area: d;
-}
-.item:nth-of-type(5) {
-  grid-area: e;
-}
-.item:nth-of-type(6) {
-  grid-area: f;
-}
-.item:nth-of-type(7) {
-  grid-area: g;
-}
-.item:nth-of-type(8) {
-  grid-area: h;
-}
-.item:nth-of-type(9) {
-  grid-area: i;
-}
-.item:nth-of-type(10) {
-  grid-area: j;
-}
-.item:nth-of-type(11) {
-  grid-area: k;
-}
+
 
 .flower {
   display: flex;
@@ -155,27 +133,44 @@ body {
   right: calc(-15px);
   margin-bottom: 40px;
 }
+.flowers {
+  display: flex;
+  position: relative;
+  top: 20%;
+  left: 0%;
+}
 
 .title-wrap {
   display: flex;
-  z-index: 999;
+  z-index: -20;
   position: fixed;
-  top: 0;
+  
+  
 }
 
 .title {
   display: flex;
-  margin-top: -10px;
   font-weight: 200;
-  font-size: calc(34px);
-  justify-content: center;
-  align-items: center;
+  font-size: calc(30px);
   overflow-y: hidden;
-  padding-inline: 50px;
-  padding: 20px;
+  padding: 40px;
   gap: 0.78rem;
-  z-index: 9999;
+  mix-blend-mode: exclusion;
+ 
+  height: 40px;
+ 
+  top: 0;
+  bottom: 0;
+
 }
+.title-container{
+  position: fixed;
+  display: flex;
+  
+  z-index: 99999;
+  
+}
+
 
 .berlin {
   display: flex;
@@ -183,8 +178,6 @@ body {
   margin-top: 90px;
   width: 150vw;
   height: 25vh;
-  
-  
 }
 .berlin-flex {
   display: flex;
@@ -201,7 +194,7 @@ body {
   z-index: 0;
   letter-spacing: 5px;
   word-spacing: 4px;
-  padding-left: 70px;
+  padding-left: 100px;
 }
 .text-h1 {
   display: flex;
@@ -211,11 +204,33 @@ body {
   margin-bottom: 70px;
   letter-spacing: 5px;
   word-spacing: 4px;
-  padding-left: 70px;
+  padding-left: 100px;
   font-size: calc(30px);
   font-weight: 900;
 }
-.text-span{
+.text2 {
+  display: flex;
+  position: relative;
+  width: 40vw;
+  z-index: 0;
+  letter-spacing: 5px;
+  word-spacing: 4px;
+  padding-left: 100px;
+  padding-bottom: 50px;
+}
+.text-h2 {
+  display: flex;
+  position: relative;
+  z-index: 0;
+  margin-top: 90px;
+  margin-bottom: 70px;
+  letter-spacing: 5px;
+  word-spacing: 4px;
+  padding-left: 100px;
+  font-size: calc(30px);
+  font-weight: 900;
+}
+.text-span {
   display: flex;
   position: relative;
   z-index: 0;
@@ -232,7 +247,7 @@ body {
   position: relative;
   overflow-y: hidden;
   font-size: calc(45px);
-  background-color: white;
+  background-color: inherit;
 }
 .h1 {
   display: flex;
@@ -241,9 +256,6 @@ body {
 }
 
 @media screen and (max-width: 750px) {
- 
-  
-
   .title {
     font-size: calc(12px);
     font-weight: bold;
@@ -257,10 +269,12 @@ body {
 
   .text {
     font-size: calc(12px);
+    padding-left: 70px;
   }
 
   .text-h1 {
     font-size: calc(25px);
+    padding-left: 70px;
   }
 
   .heading {
@@ -269,26 +283,22 @@ body {
   .h1 {
     height: calc(25px);
   }
-  .smile-wrap{
+  .smile-wrap {
     z-index: 0;
   }
-  .smile{
+  .smile {
     width: 185pt;
     height: 185pt;
   }
-  
-
 }
-@media screen and (max-width: 1200px){
+@media screen and (max-width: 1200px) {
   .berlin {
     display: flex;
     position: relative;
     width: 95vw;
     margin-left: 10px;
-   
   }
-  .scroll{
-    left: 10vw
+  .scroll {
+    left: 10vw;
   }
 }
- 
